[package]
name = "boxletters"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Converts text to a list of regional indicator emoji. Mostly for annoying friends on Discord"
documentation = "https://docs.rs/boxletters"
readme = "README.md"
homepage = "https://github.com/ewpratten/boxletters"
repository = "https://github.com/ewpratten/boxletters"
license = "GPL-3.0"
keywords = ["text-to-emoji", "unicode", "cli-tool"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"
